# brainhack_musicbox

Korg_EX-800/: Korg EX-800 parameters.ods
cpp_exercises/01 - math problems/: CMakeLists.txt  gtest.cpp  main.cpp  math.h  math_problems.h
openframeworks/qtcreator/pic2mesh/: pic2mesh.qbs  pic2mesh.qbs.user.21
openframeworks/qtcreator/pic2mesh/src/: main.cpp  ofApp.cpp  ofApp.h
openframeworks/vscode/mesh_exercise/src/: ofApp.cpp  ofApp.h
openframeworks_vscode/aubio_demo/: config.make
openframeworks_vscode/mesh_exercise/src/: main.cpp  ofApp.cpp  ofApp.h
openframeworks_vscode/src/: ofApp.cpp
supercollider/: dualshock_4_hid.scd
supercollider/future_tracks/: cartoon_noire.scd
supercollider/gamepad_GrainFM/: control_functions.scd  grain_fm.scd  settings.scd  xeox_hid.scd
supercollider/old_snippets/: ambient.scd  autogui.scd  beatstep.scd  beatstep_sampler.scd  blank.scd  drum.scd  gamepad.sc  gamepad_granulator.sc  grain.scd  midi.scd  midi_patterns.scd  patterns.scd  test.scd
supercollider/playing_with_gui/: gui.scd  gui2.scd
supercollider/sequencer/: sequence.scd  sequencer.scd
useful_scripts/: video_deshaker.sh  video_rotate.sh
